# ai-shopping-agent

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  api.py  docker-compose.yml  generate_graph_docs.py  main.py  pyproject.toml  test_conversion.py
backend/agent/: edges.py  graph.py  nodes.py  state.py  tools.py
backend/services/: client.py  stream_service.py
backend/utils/: history_helper.py  message_converter.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/history/: route.ts
frontend/components/: AssistantThread.tsx  Chat.tsx  ChatInterface.tsx  ChatRuntimeProvider.tsx  MyAssistant.tsx  ProductCard.tsx  ProductDiscoveryUI.tsx  ProductModal.tsx  ProductToolUI.tsx
frontend/context/: ProductModalContext.tsx
frontend/lib/: utils.ts
